--- a/.github/actions/check-merge-conflict/action.yml
+++ b/.github/actions/check-merge-conflict/action.yml
@@ -24,7 +24,7 @@ runs:
       run: echo '${{ toJSON(matrix) }}'
 
     - name: Check for merge conflict
-      if: event.pull_request == '' || event.pull_request.head.fork == 'false'
+      if: github.event.pull_request == '' || github.event.pull_request.head.fork == 'false'
       # releases/2.x
       uses: eps1lon/actions-label-merge-conflict@b8bf8341285ec9a4567d4318ba474fee998a6919
       with:
