--- a/.github/actions/check-merge-conflict/action.yml
+++ b/.github/actions/check-merge-conflict/action.yml
@@ -5,7 +5,7 @@ runs:
   using: "composite"
   steps:
     - name: Check for merge conflict
-      if: github.event.pull_request == '' || github.event.pull_request.head.repo.fork == 'false'
+      if: github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false
       # releases/2.x
       uses: eps1lon/actions-label-merge-conflict@b8bf8341285ec9a4567d4318ba474fee998a6919
       with:
