--- a/.github/workflows/verify-this-pull-request.yml
+++ b/.github/workflows/verify-this-pull-request.yml
@@ -1,4 +1,4 @@
-name: Validate Pull Request
+name: Verify Submodule Pull Request
 # This is the same workflow you'd find in our other submodules. Unlike the rest of the workflows in this repo, this one
 # is meant to actually run here, so don't call it from other repos.
 
@@ -8,6 +8,3 @@ on:
 jobs:
   call-verify-workflow:
     uses: Lombiq/GitHub-Actions/.github/workflows/verify-submodule-pull-request.yml@dev
-
-  call-check-merge-conflict:
-    uses: Lombiq/GitHub-Actions/.github/workflows/validate-pull-request.yml@dev
