--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -18,6 +18,7 @@ inputs:
       cspell:html/html.txt
       cspell:css/css.txt
       cspell:csharp/csharp.txt
+      cspell:software-terms/src/software-terms.txt
       cspell:rust/rust.txt
       cspell:npm/npm.txt
       cspell:dotnet/dotnet.txt
