--- a/.github/actions/spelling/action.yml
+++ b/.github/actions/spelling/action.yml
@@ -33,7 +33,7 @@ inputs:
     description: Repository with default configuration to use, the default from Check Spelling is ''.
     required: false
     type: string
-    default: Lombiq/GitHub-Actions@issue/NEST-365
+    default: Lombiq/GitHub-Actions@dev
 
 runs:
   using: "composite"
