--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -8,6 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Check for Merge Conflict in PR
-      uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@dev
+      uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@issue/OSOE-397
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
