--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -113,28 +113,67 @@ jobs:
         creds: ${{ secrets.AZURE_APP_SERVICE_RESET_SERVICE_PRINCIPAL }}
         enable-AzPSSession: true
 
-    - name: Import PowerShell modules
-      uses: Lombiq/GitHub-Actions/.github/actions/import-reset-environment-scripts@issue/NEST-338
+#     - name: Stop Web App Slot
+#      # v1.1.0
+#      uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
+#      with:
+#        inlineScript: |
+#          Stop-AzWebAppSlot `
+#            -ResourceGroupName ${{ inputs.resource-group-name }} `
+#            -Name ${{ inputs.app-name }} `
+#            -Slot ${{ inputs.destination-slot-name }}
+#        azPSVersion: latest
 
     - name: Replace Media
       run: |
-        Get-Module | Write-Output
+        Set-AzureWebAppStorageContentFromStorage `
+          -ResourceGroupName ${{ inputs.resource-group-name }}`
+          -WebAppName  ${{ inputs.app-name }} `
+          -SourceSlotName ${{ inputs.source-slot-name }} `
+          -DestinationSlotName ${{ inputs.slot-name }} `
+          -ConnectionStringName ${{ inputs.storage-connection-string-name }} `
+          -ContainerBlackList @(${{ fromJson(inputs.container-black-list) }}) `
+          -ContainerWhiteList @(${{ fromJson(inputs.container-white-list) }}) `
+          -FolderBlackList @(${{ fromJson(inputs.folder-black-list) }}) `
+          -FolderWhiteList @(${{ fromJson(inputs.folder-white-list) }})
 
     - name: Replace Database
       run: |
-        Copy-AzureWebAppSqlDatabase
+        Copy-AzureWebAppSqlDatabase `
+          -ResourceGroupName ${{ inputs.resource-group-name }} `
+          -WebAppName ${{ inputs.app-name }}  `
+          -SourceSlotName ${{ inputs.source-slot-name }} `
+          -DestinationSlotName ${{ inputs.slot-name }} `
+          -ConnectionStringName ${{ inputs.database-connection-string-name }} `
+          -Force
 
     - name: Scale Database
       run: |
-        Set-AzureWebAppSqlDatabaseServiceObjective
+        Set-AzureWebAppSqlDatabaseServiceObjective `
+          -ResourceGroupName ${{ inputs.resource-group-name }} `
+          -WebAppName ${{ inputs.app-name }} `
+          -SlotName ${{ inputs.destination-slot-name }} `
+          -ConnectionStringName ${{ inputs.database-connection-string-name }} `
+          -ServiceObjectiveName ${{ inputs.service-objective-name }}
 
     - name: Add destination contained User to destination database
       run: |
-        Add-AzureWebAppSqlDatabaseContainedUser
+        Add-AzureWebAppSqlDatabaseContainedUser `
+          -ResourceGroupName ${{ inputs.resource-group-name }} `
+          -WebAppName ${{ inputs.app-name }} `
+          -DatabaseSlotName ${{ inputs.destination-slot-name }} `
+          -DatabaseConnectionStringName ${{ inputs.database-connection-string-name }} `
+          -UserConnectionStringName ${{ inputs.user-connection-string-name }}
 
     - name: Remove source contained User from destination database
       run: |
-        Remove-AzureWebAppSqlDatabaseContainedUser
+        Remove-AzureWebAppSqlDatabaseContainedUser `
+          -ResourceGroupName ${{ inputs.resource-group-name }} ``
+          -WebAppName ${{ inputs.app-name }} `
+          -DatabaseSlotName ${{ inputs.destination-slot-name }} `
+          -UserSlotName ${{ inputs.source-slot-name }} `
+          -DatabaseConnectionStringName ${{ inputs.database-connection-string-name }} `
+          -UserConnectionStringName ${{ inputs.user-connection-string-name }}
 
     - name: Start Web App Slot
       # v1.1.0
