Changing action branch

--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -125,7 +125,7 @@ jobs:
 #        azPSVersion: latest
 
     - name: Initialize PowerShell modules
-      uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@feature/github-actions
+      uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@issue/NEST-338
 
     - name: Replace Media
       run: |
