Trying to import the module

--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -129,6 +129,8 @@ jobs:
 
     - name: Replace Media
       run: |
+        Import-Module Set-AzureWebAppStorageContentFromStorage
+
         Set-AzureWebAppStorageContentFromStorage
 
     - name: Start Web App Slot
