--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -128,10 +128,13 @@ jobs:
       uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@issue/NEST-338
 
     - name: Replace Media
-      run: |
-        Import-Module Set-AzureWebAppStorageContentFromStorage
+      uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
+      with:
+        inlineScript: |
+          Import-Module Set-AzureWebAppStorageContentFromStorage
 
-        Set-AzureWebAppStorageContentFromStorage
+          Set-AzureWebAppStorageContentFromStorage
+        azPSVersion: latest
 
     - name: Start Web App Slot
       # v1.1.0
