--- a/.github/actions/check-merge-conflict/action.yml
+++ b/.github/actions/check-merge-conflict/action.yml
@@ -6,8 +6,8 @@ runs:
   steps:
     - name: Check for merge conflict
       if: github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false
-      # releases/2.x
-      uses: eps1lon/actions-label-merge-conflict@v2.1.0
+      # releases/2.1.0
+      uses: eps1lon/actions-label-merge-conflict@92924ba33a60e436034b0ac3838de523bf7df071
       with:
         repoToken: ${{ env.GITHUB_TOKEN }}
         commentOnDirty: "This pull request has merge conflicts. Please resolve those before requesting a review."
