--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -145,7 +145,7 @@ jobs:
       id: set-up-runtime-option
       if: ${{ inputs.runtime != '' }}
       run: |
-        Set-Output "runtime-option=--runtime" "${{ inputs.runtime }}"
+        Set-Output "runtime-option" "--runtime=${{ inputs.runtime }}"
 
     - name: Build and Static Code Analysis
       uses: Lombiq/GitHub-Actions/.github/actions/build-dotnet@dev
