--- a/.github/actions/create-jira-issues-for-community-activities/action.yml
+++ b/.github/actions/create-jira-issues-for-community-activities/action.yml
@@ -91,10 +91,10 @@ runs:
       id: create-issue
       uses: atlassian/gajira-create@c0a9c69ac9d6aa063fed57201e55336ada860183
       with:
-        project: ${{ env.JIRA_PROJECT_KEY }}
-        issuetype: ${{ steps.issue-details.outputs.type }}
-        summary: ${{ steps.issue-details.outputs.summary }}
-        description: ${{ fromJSON(steps.issue-details.outputs.json-description) }}
+        project: ADHOC
+        issuetype: Task
+        summary: Testing
+        description: Testing
         fields: ${{ steps.issue-details.outputs.fields }}
 
     - name: Add Remote Link to Jira Issue
