--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -66,7 +66,7 @@ on:
       container-black-list:
         required: false
         type: string
-        default: ""
+        default: "[]"
         description: >
             Stringified JSON array with the name of the container(s), e.g.
             "[\"not.media\"]" or "[\"not-media\", \"bad-container\"]".
@@ -87,7 +87,7 @@ on:
       folder-white-list:
         required: false
         type: string
-        default: ""
+        default: "[]"
         description: >
             Stringified JSON array with the name of the folder(s), e.g.
             "[\"NotRecipeJournal\"]" or "[\"NotRecipeJournal\", \"CoolFolder\"]".
@@ -108,26 +108,20 @@ jobs:
         - ${{ inputs.timeout-minutes }}
     timeout-minutes: ${{ matrix.timeout-minutes }}
     steps:      
-    - name: Login to Azure
-      # v1.4.5
-      uses: azure/login@24848bc889cfc0a8313c2b3e378ac0d625b9bc16
-      with:
-        creds: ${{ secrets.AZURE_APP_SERVICE_RESET_SERVICE_PRINCIPAL }}
-        enable-AzPSSession: true
 
-    - name: Stop Web App Slot
+
+    - name: Initialize PowerShell modules
+      uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@issue/NEST-338
+
+    - name: Replace Media
       # v1.1.0
       uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
       with:
         inlineScript: |
-          Stop-AzWebAppSlot `
-            -ResourceGroupName ${{ inputs.resource-group-name }} `
-            -Name ${{ inputs.app-name }} `
-            -Slot ${{ inputs.destination-slot-name }}
-        azPSVersion: latest
+          echo ${{ inputs.container-black-list }}
+          echo ${{ fromJson(inputs.container-black-list) }}
 
-    - name: Initialize PowerShell modules
-      uses: Lombiq/Infrastructure-Scripts/.github/actions/initialize@issue/NEST-338
+        azPSVersion: latest
 
     - name: Replace Media
       # v1.1.0
