--- a/.github/actions/publish-nuget/action.yml
+++ b/.github/actions/publish-nuget/action.yml
@@ -31,6 +31,12 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Setup Scripts
+      shell: pwsh
+      run: |
+        "${{ github.action_path }}" >> $Env:GITHUB_PATH
+        (Resolve-Path "${{ github.action_path }}/../../../Scripts").Path >> $Env:GITHUB_PATH
+
     - name: Setup
       id: setup
       shell: pwsh
@@ -60,7 +66,7 @@ runs:
         }
         
         Write-Output "Target Version: $version"
-        Set-Output -Key "publish-version" -Value $version
+        Set-Output "publish-version" $version
         
         "${{ github.action_path }}" >> $Env:GITHUB_PATH
 
