--- a/.github/actions/create-jira-issues-for-community-activities/action.yml
+++ b/.github/actions/create-jira-issues-for-community-activities/action.yml
@@ -32,11 +32,11 @@ runs:
         PR_TITLE: ${{ github.event.pull_request.title }}
       shell: pwsh
       run: |
-        $output = "${{ github.event.pull_request }}" -eq "" ? "False" : (Confirm-PullRequestTitle "$($Env:PR_TITLE)")
+        $output = "${{ github.event.pull_request }}" -eq "" ? "True" : (Confirm-PullRequestTitle "$($Env:PR_TITLE)")
         Set-Output "is-issue-pr" $output
 
     - name: Login to Jira
-      if: ${{ steps.issue-related-pr.outputs.is-issue-pr == 'False' }}
+      if: steps.issue-related-pr.outputs.is-issue-pr == 'False'
       # v1.0.0.
       # This will show a "Logged in as: undefined" message if the login works, see:
       # https://github.com/atlassian/gajira-login/issues/30.
