--- a/.github/actions/create-jira-issues-for-community-activities/action.yml
+++ b/.github/actions/create-jira-issues-for-community-activities/action.yml
@@ -36,6 +36,12 @@ runs:
         Set-Output "is-issue-pr" $output
         Write-Output "Output value: $output"
 
+    - name: Testing
+      id: testing
+      shell: pwsh
+      run: |
+        Write-Output "is-issue-pr value: ${{ steps.issue-related-pr.outputs.is-issue-pr }}"
+
     - name: Login to Jira
       if: steps.issue-related-pr.outputs.is-issue-pr == 'False'
       # v1.0.0.
