--- a/.github/actions/create-jira-issues-for-community-activities/action.yml
+++ b/.github/actions/create-jira-issues-for-community-activities/action.yml
@@ -34,7 +34,7 @@ runs:
       run: |
         $output = "${{ github.event.pull_request }}" -eq "" ? "True" : (Confirm-PullRequestTitle "$($Env:PR_TITLE)")
         Set-Output "is-issue-pr" $output
-        Write-Output "Output value: $output"
+        Write-Output "Output value: $is-issue-pr"
 
     - name: Testing
       id: testing
