--- a/.github/actions/create-jira-issues-for-community-activities/action.yml
+++ b/.github/actions/create-jira-issues-for-community-activities/action.yml
@@ -32,7 +32,7 @@ runs:
         PR_TITLE: ${{ github.event.pull_request.title }}
       shell: pwsh
       run: |
-        $output = "${{ github.event.pull_request }}" -eq "" ? "True" : (Confirm-PullRequestTitle "$($Env:PR_TITLE)")
+        $output = "${{ github.event.pull_request }}" -eq "" ? "False" : (Confirm-PullRequestTitle "$($Env:PR_TITLE)")
         Set-Output "is-issue-pr" $output
         Write-Output "Output value: $is-issue-pr"
 
